Header: FIX horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -84,7 +84,6 @@ select {
 
 header {
     color: white;
-    width: 100%;
     height: 50px;
     padding-top: 10px;
     padding-left: 20px;
